--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "materialize-css": "^1.0.0-rc.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-materialize": "^3.10.0",
     "react-scripts": "^5.0.1"
   },
   "scripts": {
@@ -21,5 +23,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "css-loader": "^6.7.1",
+    "style-loader": "^3.3.1"
   }
 }
